# xsampa

./: .gitignore  CHANGES.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: wheel.yml
src/hpat/xsampa/: __init__.py  converters.py  macro.py
src/hpat/xsampa/test/: __init__.py
