[metadata]
name = xsampa-HeuronPatapon
version = attr: hpat.xsampa.__version__
author = Heuron Patapon
author_email = heuron-patapon@laposte.net
description = Convert between XSAMPA and IPA data formats. 
url = https://github.com/HeuronPatapon/xsampa.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.10
install_requires = ezre-HeuronPatapon @ git+https://github.com/HeuronPatapon/ezre#egg=1.1

[options.packages.find]
where = src

[options.extras_require]
pandoc = panflute

[options.entry_points]
console_scripts =
        panipa = hpat.xsampa.macro:main [pandoc]
